trunk/Archive2/77/918d65632e18ac/output
main.cpp: In instantiation of 'const T&& as_const(const T&&) [with T = int]':
main.cpp:14:45:   required from here
main.cpp:5:64: error: cannot bind 'const int' lvalue to 'const int&&'
 template <typename T> const T&& as_const(const T&& t) { return t; }
                                                                ^
main.cpp: In function 'const T&& as_const(const T&&) [with T = int]':
main.cpp:5:67: warning: control reaches end of non-void function [-Wreturn-type]
 template <typename T> const T&& as_const(const T&& t) { return t; }
                                                                   ^
